# versioning

./: Dockerfile  README.md  app-deploy.yaml  openapi-v1.1.json  openapi-v1.json  openapi-v2.0.json  pyproject.toml  requirements.txt  run.ipynb  run.sh  tyk-values.yaml
app/: main.py
